# zMath

./: .gitignore  CMakeLists.txt  README.md  main.c  run.bat  run.sh
src/: CMakeLists.txt  zmath.h
src/zmath/: CMakeLists.txt  zmath.c  zmath.h  zmatrix.c  zmatrix.h  zstring.h  zvec.c  zvec.h
